[project]
name = "temporal-trip-booking-app"
version = "0.1.0"
description = "A Temporal workflow for booking a trip, with compensating actions"
authors = [
    { name = "Peter Sullivan", email = "peter.sullivan@temporal.io" }
]
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.21.1",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0"
]

[tool.pytest.ini_options]
pythonpath = "."
