[project]
name = "temporal-trip-booking-ui"
version = "0.1.0"
description = "A Temporal workflow for booking a trip, with compensating actions"
authors = [
    { name = "Peter Sullivan", email = "peter.sullivan@temporal.io" }
]
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.21.1",
    "flask[async]>=3.1.0",
]
