[project]
name = "temporal-trip-booking-ui"
version = "0.1.0"
description = "A Temporal workflow for booking a trip, with compensating actions"
authors = [
    { name = "Peter Sullivan", email = "peter.sullivan@temporal.io" }
]
requires-python = ">=3.12"
dependencies = [
    "quart>=0.19.7",
    "temporalio>=1.21.1",
]
